fixed logo, profiles and menu on mobile app

--- a/prototype/src/css/Profiles.css
+++ b/prototype/src/css/Profiles.css
@@ -1,15 +1,10 @@
-@media only screen and (min-device-width: 1224px) {
-  .profiles {
-    margin-top: 30px;
-    margin-bottom: 5px;
-  }
+.profiles {
+  margin-top: 30px;
+  margin-bottom: 5px;
 }
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 1224px) {
-  .profiles {
-    display: flexbox;
-    flex-direction: column;
-  }
+.profilesMobile {
+  display: flex;
+  flex-direction: column;
 }
 
 button.btn.btn-flat {
@@ -107,4 +102,43 @@ a.btn.btn-enterprise {
   border-bottom-color: rgba(185, 128, 63, 1);
   display: inline-flex;
   align-items: center;
+}
+.profilesBar {
+  background: rgb(27, 59, 93);
+  background: linear-gradient(
+    90deg,
+    rgba(27, 59, 93, 1) 32%,
+    rgba(243, 242, 245, 1) 83%
+  );
+  height: fit-content;
+  width: 100%;
+  margin-bottom: 4px;
+  font-size: medium;
+  font-family: "Segoe UI", sans-serif;
+  color: white;
+  text-align: initial;
+}
+
+.containerProfiles.container {
+  margin-top: 8px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.profilesCard .card-header {
+  text-align: start;
+  width: 100%;
+  color: white;
+  background-color: #f22738;
+}
+.profilesCard .card-body {
+  text-align: start;
+
+  background-color: #f3f2f5;
+}
+.profilesCard {
+  width: 100%;
+}
+.users {
+  width: 24px;
+  height: 24px;
 }
